// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AlertMessage Custom Style 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
        "marginVertical": 25,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#CCCCCC",
          "fontFamily": "Oswald-Light",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginHorizontal": 16,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      ALERT ALERT
    </Text>
  </View>
</View>
`;

exports[`Storyshots AlertMessage Default 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
        "marginVertical": 25,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#CCCCCC",
          "fontFamily": "Oswald-Light",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginHorizontal": 16,
          "marginTop": 16,
          "textAlign": "center",
        }
      }
    >
      ALERT ALERT
    </Text>
  </View>
</View>
`;

exports[`Storyshots AlertMessage Hidden 1`] = `null`;

exports[`Storyshots Button Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#A9CEC9",
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#637381",
          "fontFamily": "Oswald-Bold",
          "fontSize": 20,
          "marginVertical": 16,
          "textAlign": "center",
        }
      }
    >
      Drawer Button
    </Text>
  </View>
</View>
`;
